Migrate to Spring Boot 4 + Fixes